# project-wharf

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .guix-channel  AI.a2ml  CHANGELOG.adoc  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.adoc  CONTRIBUTING.adoc  CONTRIBUTING.md  Cargo.toml  Containerfile  ECOSYSTEM.scm  EXPLAINME.adoc  FUNDING.yml  GOVERNANCE.adoc  Justfile  LICENSE.txt  MAINTAINERS.md  META.scm  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  REVERSIBILITY.md  ROADMAP.adoc  ROADMAP.md  RSR_COMPLIANCE.adoc  SECURITY.md  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  codemeta.json  eclexiaiser.toml  flake.nix  guix.scm  justfile  (+6 more)
.bot_directives/: echidnabot.scm  seambot.scm
.cargo/: config.toml
.claude/: CLAUDE.md
.clusterfuzzlite/: Containerfile  Dockerfile  build.sh  project.yaml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  PROVEN-INTEGRATION.md  dependabot.yml
.github/workflows/: cargo-audit.yml  cflite_batch.yml  cflite_pr.yml  codeql.yml  generator-generic-ossf-slsa3-publish.yml  ghcr-publish.yml  governance.yml  guix-nix-policy.yml  jekyll-gh-pages.yml  npm-bun-blocker.yml  php-security.yml  php.yml  quality.yml  rsr-antipattern.yml  rust-ci.yml  rust.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  security-policy.yml  security-scan.yml  wellknown-enforcement.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  CLADE.a2ml  ECOSYSTEM.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.a2ml  META.scm  MUST.contractile  STATE.a2ml  STATE.scm  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/contractiles/: Justfile
.machine_readable/self-validating/: README.adoc  yacht-config.k9.ncl
.machine_readable/svc/: README.adoc
.machine_readable/svc/k9/: README.adoc  deploy-wharf.k9.ncl  deployment-params.k9.ncl  yacht-config.k9.ncl
.machine_readable/svc/self-validating/: deployment-params.k9.ncl
.machines_readable/6scm/: ECOSYSTEM.scm
.well-known/: ai.txt  consent-required.txt  dc.xml  humans.txt  provenance.json  security.txt
adapters/drupal/: filesystem.ncl  settings.php
adapters/generic-lamp/: filesystem.ncl
adapters/joomla/: filesystem.ncl
adapters/moodle/: filesystem.ncl
adapters/wordpress/: db.php  filesystem.ncl
adapters/wordpress-wharf/: readme.txt  wharf-adapter.php
configs/: fleet.toml
contractiles/: README.adoc
contractiles/k9/: deploy-wharf.k9.ncl  deployment-params.k9.ncl  yacht-config.k9.ncl
crates/wharf-core/: Cargo.toml
crates/wharf-core/benches/: wharf_bench.rs
crates/wharf-core/src/: config.rs  crypto.rs  db_policy.rs  errors.rs  fleet.rs  integrity.rs  lib.rs  mooring.rs  mooring_client.rs  nebula.rs  snapshot.rs  sync.rs  types.rs
crates/wharf-core/tests/: contracts.rs  integration.rs  property_tests.rs  security_aspects.rs
crates/wharf-ebpf/: Cargo.toml
crates/wharf-ebpf/src/: loader.rs  main.rs
deploy/: Containerfile.ols-local  DEPLOY.adoc  SESSION-SUMMARY-2026-02-14.md  compose.yaml  local-test.sh  setup.sh  verify-sqli.sh
deploy/wharf-local/db/: .my-healthcheck.cnf  aria_log_control
deploy/wharf-local/db/mysql/: column_stats.MAI  column_stats.frm  columns_priv.MAI  columns_priv.frm  db.MAD  db.MAI  db.frm  event.MAI  event.frm  func.MAI  func.frm  general_log.frm  global_priv.MAD  global_priv.MAI  global_priv.frm  gtid_slave_pos.frm  help_category.MAI  help_category.frm  help_keyword.MAI  help_keyword.frm  help_relation.MAI  help_relation.frm  help_topic.MAI  help_topic.frm  index_stats.MAI  index_stats.frm  innodb_index_stats.frm  innodb_index_stats.ibd  innodb_table_stats.frm  (+32 more)
docs/: ARCHITECTURE.md  CITATIONS.adoc  HACK-ME-CHALLENGE.adoc  tech-debt-2026-05-26.md
examples/: wharf-cli.toml  yacht-agent.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_integrity.rs  fuzz_sql_policy.rs
infra/: selur-compose.yaml
infra/cerro/: README.adoc  yacht-agent.ctp  yacht-mariadb.ctp  yacht-memcached.ctp  yacht-redis.ctp  yacht-web.ctp
infra/config/: nginx.conf  php-fpm.conf  wordpress-ols.conf  wordpress-rules.conf
infra/config/openlitespeed/: httpd_config.conf
infra/containers/: Containerfile.agent  Containerfile.nginx  Containerfile.openlitespeed  Containerfile.php  agent.Dockerfile  nginx.Dockerfile  openlitespeed.Dockerfile  php.Dockerfile
infra/podman/: yacht.yaml
infra/svalinn/: yacht.yaml
infra/systemd/: yacht-agent.service
scripts/: demo.sh  smoke_test.sh  ssl-setup.sh
src/ui/public/: index.html
src/ui/tea/: project_wharf_gui.affine  project_wharf_tea.js
xtask/: Cargo.toml
xtask/src/: main.rs
(+105 files in other folders)
