[workspace]
members = [
    "crates/wharf-core",
    "bin/wharf-cli",
    "bin/yacht-agent",
    "xtask",
]
# eBPF crate excluded from default build - requires special toolchain (bpf-linker)
# Build with: cargo xtask build-ebpf
# Or manually: cd crates/wharf-ebpf && cargo +nightly build --target bpfel-unknown-none -Z build-std=core
exclude = ["crates/wharf-ebpf", "fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
license = "PMPL-1.0"
repository = "https://gitlab.com/hyperpolymath/wharf"
description = "The Sovereign Web Hypervisor - Immutable CMS Infrastructure"

[workspace.dependencies]
# CLI & Async
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }

# Configuration
nickel-lang-core = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database Proxy (AST-aware SQL filtering)
sqlparser = "0.39"

# Authentication (FIDO2 / Hardware Keys)
webauthn-rs = "0.4"

# Cryptography
blake3 = "1.5"
argon2 = "0.5"

# Post-Quantum Hybrid Signatures (FIPS 204 ML-DSA-87)
pqcrypto-mldsa = "0.1"
pqcrypto-traits = "0.3"

# Ed448 Goldilocks Curve (classical component of hybrid)
ed448-goldilocks = { version = "0.14.0-pre.10", features = ["signing"] }

# SHAKE3/SHA3 (FIPS 202)
sha3 = "0.10"

# XChaCha20-Poly1305 symmetric encryption
chacha20poly1305 = "0.10"

# HKDF key derivation
hkdf = "0.12"

# ChaCha20-based CSPRNG
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["std"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Crypto utilities
hex = "0.4"
zeroize = { version = "1.7", features = ["derive"] }

# Networking
trust-dns-client = "0.23"
trust-dns-server = "0.23"

# Logging & Error Handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"

# File System Monitoring
notify = "6.1"

# HTTP Proxy
hyper = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"

# eBPF (Userspace Loader)
aya = "0.12"

# Date/Time
chrono = "0.4"
