[package]
name = "wharf-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Project Wharf - shared types, crypto, and SQL AST logic"

[dependencies]
# SQL AST Parsing (for Database Proxy)
sqlparser = { workspace = true }

# Cryptography
blake3 = { workspace = true }
argon2 = { workspace = true }
pqcrypto-mldsa = { workspace = true }
pqcrypto-traits = { workspace = true }
ed448-goldilocks = { workspace = true }
sha3 = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
rand_chacha = { workspace = true }
rand_core = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Platform-independent directories
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
